--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "demo": "https://demo.ghost.io",
     "version": "2.10.1",
     "engines": {
-        "ghost": ">=2.0.0",
-        "ghost-api": "v2"
+        "ghost": ">=2.0.0"
     },
     "license": "MIT",
     "screenshots": {
