--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-    "name": "casper",
-    "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
+    "name": "casper (Hana 202107)",
+    "description": "A clean, minimal default theme for the Ghost publishing platform",
     "demo": "https://demo.ghost.io",
-    "version": "2.10.1",
+    "version": "4.0.5",
     "engines": {
-        "ghost": ">=2.0.0"
+        "ghost": ">=4.0.0",
+        "ghost-api": "v4"
     },
     "license": "MIT",
     "screenshots": {
@@ -15,6 +16,7 @@
         "dev": "gulp",
         "zip": "gulp zip",
         "test": "gscan .",
+        "test:ci": "gscan --fatal --verbose .",
         "pretest": "gulp build",
         "preship": "yarn test",
         "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; else echo \"Uncomitted changes found.\" && exit 1; fi",
@@ -23,7 +25,7 @@
     "author": {
         "name": "Ghost Foundation",
         "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "url": "https://ghost.org/"
     },
     "gpm": {
         "type": "theme",
@@ -44,21 +46,26 @@
     "bugs": "https://github.com/TryGhost/Casper/issues",
     "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
     "devDependencies": {
-        "@tryghost/release-utils": "0.3.2",
-        "autoprefixer": "9.5.1",
-        "beeper": "1.1.1",
+        "@tryghost/release-utils": "0.6.12",
+        "autoprefixer": "10.2.5",
+        "beeper": "2.1.0",
         "cssnano": "4.1.10",
-        "gscan": "2.5.1",
-        "gulp": "4.0.1",
-        "gulp-livereload": "4.0.1",
-        "gulp-postcss": "8.0.0",
+        "gscan": "4.0.0",
+        "gulp": "4.0.2",
+        "gulp-concat": "2.6.1",
+        "gulp-livereload": "4.0.2",
+        "gulp-postcss": "9.0.0",
         "gulp-uglify": "3.0.2",
-        "gulp-zip": "4.2.0",
-        "postcss-color-function": "4.1.0",
-        "postcss-custom-properties": "8.0.10",
+        "gulp-zip": "5.1.0",
+        "inquirer": "8.0.0",
+        "postcss": "8.2.8",
+        "postcss-color-mod-function": "3.0.3",
         "postcss-easy-import": "3.0.0",
         "pump": "3.0.0"
     },
+    "browserslist": [
+        "defaults"
+    ],
     "config": {
         "posts_per_page": 25,
         "image_sizes": {
@@ -81,5 +88,10 @@
                 "width": 2000
             }
         }
+    },
+    "renovate": {
+        "extends": [
+            "@tryghost:theme"
+        ]
     }
 }
