--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "casper (Hana 202107)",
+    "name": "casper-customized",
     "description": "A clean, minimal default theme for the Ghost publishing platform",
     "demo": "https://demo.ghost.io",
     "version": "4.0.5",
