--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "demo": "https://source.ghost.io",
     "version": "1.3.2",
     "engines": {
-        "ghost": ">=5.0.0"
+        "ghost": ">=6.0.0"
     },
     "license": "MIT",
     "scripts": {
@@ -83,6 +83,7 @@
             }
         },
         "card_assets": true,
+        "custom_fonts": true,
         "custom": {
             "navigation_layout": {
                 "type": "select",
